se agrega la nueva tabla

--- a/secciones/obrasociales.html
+++ b/secciones/obrasociales.html
@@ -31,8 +31,8 @@
 
 <body>
     <header>
-         <!------------------------------Navbar------------------------------------->        
-         <nav class="navbar navbar-expand-lg navbar-light navegador">
+        <!------------------------------Navbar------------------------------------->
+        <nav class="navbar navbar-expand-lg navbar-light navegador">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="../index.html">
                     <img src="../media/logo.png" alt="">
@@ -44,7 +44,7 @@
                 <div class="collapse navbar-collapse justify-content-end " id="navbarNav">
                     <ul class="navbar-nav align-items-center barraMenu mt-4">
                         <li>
-                            <a class="nav-link" href="./productos.html">Productos</a>                           
+                            <a class="nav-link" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Obras Sociales</a>
@@ -62,9 +62,102 @@
     </header>
     <main>
         <h1>Coberturas en Obras Sociales</h1>
-        <p>Atencion de obras sociales, cobertura según el PLAN, el afiliado debe presentar la credencial y  RECETA MEDICA.</p>
+        <p>Atencion de obras sociales, cobertura según el PLAN, el afiliado debe presentar la credencial y RECETA
+            MEDICA.</p>
         <!--TABLA DE OBRA SOCIALES-->
-        <div class="tObrasoc">
+
+
+
+        <div class="CSSTableGenerator">
+            <table>
+                <tr>
+                    <td>
+                        Title 1
+                    </td>
+                    <td>
+                        Title 2
+                    </td>
+                    <td>
+                        Title 3
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Row 1
+                    </td>
+                    <td>
+                        Row 1
+                    </td>
+                    <td>
+                        Row 1
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Row 2
+                    </td>
+                    <td>
+                        Row 2
+                    </td>
+                    <td>
+                        Row 2
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Row 2
+                    </td>
+                    <td>
+                        Row 2
+                    </td>
+                    <td>
+                        Row 2
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Row 3
+                    </td>
+                    <td>
+                        Row 3
+                    </td>
+                    <td>
+                        Row 3
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- <div class="tObrasoc">
             <p class="tObrasoc__header">Obra Social</p>
             <p class="tObrasoc__header">Plan Oro</p>
             <p class="tObrasoc__header">Plan Plata</p>
@@ -112,7 +205,7 @@
                 <li>Cristales 30%</li>
                 <li>Lentes de contacto 20%</li>
             </ul>
-        </div>
+        </div> -->
 
         <div class="contenedor_obrasoc" data-aos="flip-up" data-aos-duration="2000">
             <img src="../media/pami.jpg" alt="">
