--- a/secciones/obrasociales.html
+++ b/secciones/obrasociales.html
@@ -105,7 +105,7 @@
                         <ul class="tObrasoc__alt">
                             <li>Armazon 80%</li>
                             <li>Cristales 100%</li>
-                            <li>Lentes de contacto 80%</li>
+                            <li>Lentes de contacto 8git log0%</li>
                         </ul>
                     </td>
                     <td>
@@ -123,7 +123,7 @@
                     <td>
                         <ul class="tObrasoc__tabla">
                             <li>Armazon 80%</li>
-                            <li>Cristales 80%</li>
+                            <li>Cristales 70%</li>
                             <li>Lentes de contacto 60%</li>
                         </ul>
                        
