se agrego el filtrado en productos

--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -125,7 +125,7 @@
                         <div class="grillaFooter__logo">
                             <img src="../media/logo.png" alt="">
                         </div>
-                        <div class="grillaFooter__socialMedia" data-aos="zoom-out" data-aos-duration="2000">
+                        <div class="grillaFooter__socialMedia">
                             <a href="#" class="grillaFooter__socialMedia--socialIcono">
                                 <i class='bx bxl-instagram-alt'></i>
                             </a>
