--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -91,6 +91,19 @@
                     <img src="../media/armazon3.jpg" alt="">
                     <h5>Marca+modelo</h5>
                 </div>
+                <div class="lentes">
+                    <img src="../media/armazon4.jpg" alt="">
+                    <h5>Marca+modelo</h5>
+                </div>
+                <div class="lentes">
+                    <img src="../media/armazon5.jpg" alt="">
+                    <h5>Marca+modelo</h5>
+                </div>
+                <div class="lentes">
+                    <img src="../media/armazon6.jpg" alt="">
+                    <h5>Marca+modelo</h5>
+                </div>
+
                 <div class="lentesSol">
                     <img src="../media/sol.jpg" alt="">
                     <h5>Marca+modelo</h5>
@@ -103,9 +116,21 @@
                     <img src="../media/sol3.jpg" alt="">
                     <h5>Marca+modelo</h5>
                 </div>
+                <div class="lentesSol">
+                    <img src="../media/sol4.jpg" alt="">
+                    <h5>Marca+modelo</h5>
+                </div>
+                <div class="lentesSol">
+                    <img src="../media/sol5.jpg" alt="">
+                    <h5>Marca+modelo</h5>
+                </div>
+                <div class="lentesSol">
+                    <img src="../media/sol6.jpg" alt="">
+                    <h5>Marca+modelo</h5>
+                </div>
               
             </div>
-            <div class="contVideo" data-aos="zoom-in-up" data-aos-duration="2000">
+            <div class="contVideo">
                 <video class="contVideo--video" src="../media/lentes.mp4" controls></video>
                 <video class="contVideo--video" src="../media/soles.mp4" controls></video>
             </div>
