se mod  el footer, falta estilos e iconos

--- a/index.html
+++ b/index.html
@@ -164,7 +164,44 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
-                    <div class="grillaFooter">
+                    <div class="grillaFoot">
+                        <div class="grillaFoot__direc">
+                            <p>Av.Colon 2550,Córdoba.Tel.425-xxx.</p>
+                            <p>Av. Amadeo Sabattini 2320,Córdoba.Tel.428-xxx.</p>
+                        </div>
+
+
+
+                        
+                        <div class="grillaFoot__iconos">
+                            <img src="./media/logo.png" alt="">
+                            <div class="socialMedia">
+                                <a href="#" class="socialMedia__socialIcono">
+                                    <i class='bx bxl-instagram-alt'></i>
+                                </a>
+                                <a href="#" class="socialMedia__socialIcono">
+                                    <i class='bx bxl-facebook-square'></i>
+                                </a>
+                            </div>
+                            <div class="line"></div>
+                            <p class="text">Copyright &copyArev Fabi</p>
+                        </div>
+
+
+
+                        <div class="grillaFoot__sec">
+                            <ul>
+                                <li><a href="">PRODUCTOS</a></li>
+                                <li><a href="">OBRAS SOCIALES</a></li>
+                                <li><a href="">NOSOTROS</a></li>
+                                <li><a href="">CONTACTO</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+
+                    <!-- <div class="grillaFooter">
                         <div class="grillaFooter__logo">
                             <img src="./media/logo.png" alt="">
                         </div>
@@ -178,7 +215,7 @@
                         </div>
                         <div class="grillaFooter__line"></div>
                         <p class="grillaFooter__text">Copyright &copyArev Fabi</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
