se arreglo footer y mediaqueries

--- a/index.html
+++ b/index.html
@@ -166,12 +166,9 @@
                 <div class="col-sm-12 col-md-12">
                     <div class="grillaFoot">
                         <div class="grillaFoot__direc">
-                            <p>Av.Colon 2550,Córdoba.Tel.425-xxx.</p>
-                            <p>Av. Amadeo Sabattini 2320,Córdoba.Tel.428-xxx.</p>
+                            <i class='bx bx-home '><p> Av.Colon 2550,Córdoba. Tel.425-xxx</p></i>
+                            <i class='bx bx-home'><p>Av.Amadeo Sabattini 2320,Córdoba. Tel.428-xxx.</p></i>                       
                         </div>
-
-
-
                         
                         <div class="grillaFoot__iconos">
                             <img src="./media/logo.png" alt="">
@@ -187,35 +184,13 @@
                             <p class="text">Copyright &copyArev Fabi</p>
                         </div>
 
-
-
                         <div class="grillaFoot__sec">
-                            <ul>
-                                <li><a href="">PRODUCTOS</a></li>
-                                <li><a href="">OBRAS SOCIALES</a></li>
-                                <li><a href="">NOSOTROS</a></li>
-                                <li><a href="">CONTACTO</a></li>
-                            </ul>
+                                <i class='bx bx-glasses'><a href="">Productos</a></i>
+                                <i class='bx bx-list-ol'><a href="">Obras Sociales</a></i>
+                                <i class='bx bxs-home-smile'><a href="">Nosotros</a></i>
+                                <i class='bx bxs-phone'><a href="">Contacto</a></i>                                                   
                         </div>
                     </div>
-
-
-
-                    <!-- <div class="grillaFooter">
-                        <div class="grillaFooter__logo">
-                            <img src="./media/logo.png" alt="">
-                        </div>
-                        <div class="grillaFooter__socialMedia">
-                            <a href="#" class="grillaFooter__socialMedia--socialIcono">
-                                <i class='bx bxl-instagram-alt'></i>
-                            </a>
-                            <a href="#" class="grillaFooter__socialMedia--socialIcono">
-                                <i class='bx bxl-facebook-square'></i>
-                            </a>
-                        </div>
-                        <div class="grillaFooter__line"></div>
-                        <p class="grillaFooter__text">Copyright &copyArev Fabi</p>
-                    </div> -->
                 </div>
             </div>
         </div>
