se mod clases y se agrego video

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -151,19 +151,33 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <div class="grillaFooter">
-                        <div class="grillaFooter__logo">
+                        <div class="grillaFooter__direc">
+                            <i class='bx bx-home '>
+                                <p> Av.Colon 2550,Córdoba. Tel.425-xxx</p>
+                            </i>
+                            <i class='bx bx-home'>
+                                <p>Av.Amadeo Sabattini 2320,Córdoba. Tel.428-xxx.</p>
+                            </i>
+                        </div>
+                        <div class="grillaFooter__iconos">
                             <img src="../media/logo.png" alt="">
+                            <div class="socialMedia">
+                                <a href="#" class="socialMedia__socialIcono">
+                                    <i class='bx bxl-instagram-alt'></i>
+                                </a>
+                                <a href="#" class="socialMedia__socialIcono">
+                                    <i class='bx bxl-facebook-square'></i>
+                                </a>
+                            </div>
+                            <div class="line"></div>
+                            <p class="text">Copyright &copyArev Fabi</p>
                         </div>
-                        <div class="grillaFooter__socialMedia">
-                            <a href="#" class="grillaFooter__socialMedia--socialIcono">
-                                <i class='bx bxl-instagram-alt'></i>
-                            </a>
-                            <a href="#" class="grillaFooter__socialMedia--socialIcono">
-                                <i class='bx bxl-facebook-square'></i>
-                            </a>
+                        <div class="grillaFooter__secciones">
+                            <i class='bx bx-glasses'><a href="../secciones/productos.html">Productos</a></i>
+                            <i class='bx bx-list-ol'><a href="../secciones/obrasociales.html">Obras Sociales</a></i>
+                            <i class='bx bxs-home-smile'><a href="../secciones/nosotros.html">Nosotros</a></i>
+                            <i class='bx bxs-phone'><a href="#">Contacto</a></i>
                         </div>
-                        <div class="grillaFooter__line"></div>
-                        <p class="grillaFooter__text">Copyright &copyArev Fabi</p>
                     </div>
                 </div>
             </div>
