--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                     aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                     aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
             </div>
             <div class="carousel-inner contenedor-slider">
                 <div class="carousel-item active">
@@ -90,6 +92,11 @@
                 </div>
                 <div class="carousel-item">
                     <img src="./media/slide4.jpg" class="d-block w-100 carousel-item__img" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <video src="../media/slide5.mp4" autoplay loop  class="d-block w-100 carousel-item__video"></video>
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                 </div>
@@ -164,13 +171,16 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
-                    <div class="grillaFoot">
-                        <div class="grillaFoot__direc">
-                            <i class='bx bx-home '><p> Av.Colon 2550,Córdoba. Tel.425-xxx</p></i>
-                            <i class='bx bx-home'><p>Av.Amadeo Sabattini 2320,Córdoba. Tel.428-xxx.</p></i>                       
+                    <div class="grillaFooter">
+                        <div class="grillaFooter__direc">
+                            <i class='bx bx-home '>
+                                <p> Av.Colon 2550,Córdoba. Tel.425-xxx</p>
+                            </i>
+                            <i class='bx bx-home'>
+                                <p>Av.Amadeo Sabattini 2320,Córdoba. Tel.428-xxx.</p>
+                            </i>
                         </div>
-                        
-                        <div class="grillaFoot__iconos">
+                        <div class="grillaFooter__iconos">
                             <img src="./media/logo.png" alt="">
                             <div class="socialMedia">
                                 <a href="#" class="socialMedia__socialIcono">
@@ -183,12 +193,11 @@
                             <div class="line"></div>
                             <p class="text">Copyright &copyArev Fabi</p>
                         </div>
-
-                        <div class="grillaFoot__sec">
-                                <i class='bx bx-glasses'><a href="">Productos</a></i>
-                                <i class='bx bx-list-ol'><a href="">Obras Sociales</a></i>
-                                <i class='bx bxs-home-smile'><a href="">Nosotros</a></i>
-                                <i class='bx bxs-phone'><a href="">Contacto</a></i>                                                   
+                        <div class="grillaFooter__secciones">
+                            <i class='bx bx-glasses'><a href="./secciones/productos.html">Productos</a></i>
+                            <i class='bx bx-list-ol'><a href="./secciones/obrasociales.html">Obras Sociales</a></i>
+                            <i class='bx bxs-home-smile'><a href="./secciones/nosotros.html">Nosotros</a></i>
+                            <i class='bx bxs-phone'><a href="./secciones/contacto.html">Contacto</a></i>
                         </div>
                     </div>
                 </div>
