--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <video src="../media/slide5.mp4" autoplay loop  class="d-block w-100 carousel-item__video"></video>
+                    <video src="./media/slide5.mp4" autoplay loop  class="d-block w-100 carousel-item__video"></video>
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                 </div>
