se corrige mediaqueries

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
                     aria-label="Slide 5"></button>
             </div>
-            <div class="carousel-inner contenedor-slider">
+            <div class="carousel-inner contenedor-slider ">
                 <div class="carousel-item active">
                     <img src="./media/slide1.jpg" class="d-block w-100 carousel-item__img" alt="...">
                     <div class="carousel-caption d-none d-md-block">
@@ -126,23 +126,23 @@
                                 marcas, los últimos diseños precios convenientes.
                             </p>
                             <!----------------Galeria principal----------------------->
-                            <div class="grilla__catalogoPrin" data-aos="fade-right" data-aos-duration="2500">
-                                <img class="grilla__catalogoPrin--img" src="./media/armazon3.jpg" alt="armazon"
+                            <div class="grilla__catalogoPrin" data-aos="fade-right" data-aos-duration="2000">
+                                <img class="grilla__catalogoPrin--img" src="./media/prin1.jpg" alt="armazon"
                                     title="armazon negro">
-                                <img class="grilla__catalogoPrin--img" src="./media/armazon2.jpg" alt="armazon"
+                                <img class="grilla__catalogoPrin--img" src="./media/prin2.jpg" alt="armazon"
                                     title="armazon fino">
-                                <img class="grilla__catalogoPrin--img" src="./media/armazon1.jpg" alt="armazon"
+                                <img class="grilla__catalogoPrin--img" src="./media/prin3.jpg" alt="armazon"
                                     title="armazon regular">
-                                <img class="grilla__catalogoPrin--img" src="./media/sol.jpg" alt="lente"
+                                <img class="grilla__catalogoPrin--img" src="./media/prin4.jpg" alt="lente"
                                     title="ray ban">
-                                <img class="grilla__catalogoPrin--img" src="./media/sol2.jpg" alt="lente"
+                                <img class="grilla__catalogoPrin--img" src="./media/prin5.jpg" alt="lente"
                                     title="mistral">
-                                <img class="grilla__catalogoPrin--img" src="./media/sol3.jpg" alt="lente" title="gucci">
+                                <img class="grilla__catalogoPrin--img" src="./media/prin6.jpg" alt="lente" title="gucci">
 
                             </div>
                         </section>
                         <!----------------Banner promocional-------------------->
-                        <aside class="grilla__banner" data-aos="fade-left" data-aos-duration="2500 ">
+                        <aside class="grilla__banner" data-aos="fade-left" data-aos-duration="2000 ">
                             <h4 class="grilla__banner--titulo">PROMOCION 30% ARMAZONES</h4>
                             <p class="grilla__banner--text">Medios de pago </p>
                             <img class="grilla__banner--img" src="./media/naranja.png" alt="">
@@ -152,7 +152,7 @@
                     </div>
                     <!----------------Galeria de marcas---------------------------->
                     <div class="marcas">
-                        <p class="marcas__text" data-aos="zoom-out-up" data-aos-duration="1500">Marcas que nos acompañan
+                        <p class="marcas__text" data-aos="zoom-out-up" data-aos-duration="800">Marcas que nos acompañan
                         </p>
                         <img class="marcas__img" src="./media/ray-ban-logo.png" alt="" data-aos="zoom-in-up"
                             data-aos-duration="3000">
