--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -88,6 +88,8 @@
                         <li>Bifocales.</li>
                         <li>Multifocales.</li>
                     </ul>
+
+                    <!--------------BANNER----------->
                     <div class="banner" data-aos="fade-right" data-aos-duration="1500">
                         <img src="../media/delivery.png" alt="">
                         <p class="banner__text borde ">Envios gratis a todo el Pais</p>
@@ -96,7 +98,7 @@
                         <img src="../media/creditcard).png" alt="">
                         <p class="banner__text ">Medios de pago Efectivo,Debito y Tarjeta de Credito</p>
                     </div>
-
+                    <!-----------MUESTRARIO----------->
                     <section class="muestrario" data-aos="fade-left" data-aos-duration="2500">
                         <div class="muestrario__img1">
                             <img src="../media/muestra.jpg" alt="">
