--- a/secciones/obrasociales.html
+++ b/secciones/obrasociales.html
@@ -105,7 +105,7 @@
                         <ul class="tObrasoc__alt">
                             <li>Armazon 80%</li>
                             <li>Cristales 100%</li>
-                            <li>Lentes de contacto 8git log0%</li>
+                            <li>Lentes de contacto 80%</li>
                         </ul>
                     </td>
                     <td>
@@ -157,7 +157,7 @@
                     </td>
                 </tr>
             </table>
-
+            <!----- iMAGENES OBRA SOCIALES-------->
         <div class="contenedor_obrasoc" data-aos="flip-up" data-aos-duration="2000">
             <img src="../media/pami.jpg" alt="">
             <img src="../media/apross.jpg" alt="">
