se agrega seccion hero + responsive

--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
                     </ul>
                 </div>
             </div>
-        </nav>
-        <!--------------------------------Slider--------------------------->
-        <div id="carouselExampleCaptions" class="carousel slide carousel-dark" data-bs-ride="carousel">
+        </nav>        
+    </header>
+    <!-------------------------------------MAIN------------------------------------------------------------->
+   <section class="hero">
+        <div id="carouselExampleCaptions" class="carousel slide carousel-dark pt-1" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -71,7 +73,7 @@
                     aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                     aria-label="Slide 4"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
                     aria-label="Slide 5"></button>
             </div>
             <div class="carousel-inner contenedor-slider ">
@@ -96,7 +98,8 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <video src="./media/slide5.mp4" autoplay loop  class="d-block w-100 carousel-item__video"></video>
+                    <video src="./media/slide5.mp4" autoplay loop
+                        class="d-block w-100 carousel-item__video"></video>
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                 </div>
@@ -112,9 +115,12 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-    </header>
-    <!-------------------------------------MAIN------------------------------------------------------------->
-    <main>
+        <div class="wave"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+            <path d="M0.00,50.06 C134.62,-29.21 270.63,193.13 502.58,55.76 L500.00,150.22 L0.00,150.22 Z"
+                style="stroke: none; fill:#f9e9e9;"></path>
+        </svg> </div>
+    </section>  
+    <main >             
         <h1>VisionArv</h1>
         <div class="container-fluid">
             <div class="row">
@@ -137,7 +143,8 @@
                                     title="ray ban">
                                 <img class="grilla__catalogoPrin--img" src="./media/prin5.jpg" alt="lente"
                                     title="mistral">
-                                <img class="grilla__catalogoPrin--img" src="./media/prin6.jpg" alt="lente" title="gucci">
+                                <img class="grilla__catalogoPrin--img" src="./media/prin6.jpg" alt="lente"
+                                    title="gucci">
 
                             </div>
                         </section>
