--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -81,52 +81,76 @@
             <div class="galeria" data-aos="zoom-out-up" data-aos-duration="2500">
                 <div class="lentes">
                     <img src="../media/armazon1.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
                 <div class="lentes">
                     <img src="../media/armazon2.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
                 <div class="lentes">
                     <img src="../media/armazon3.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
                 <div class="lentes">
                     <img src="../media/armazon4.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
                 <div class="lentes">
                     <img src="../media/armazon5.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
                 <div class="lentes">
                     <img src="../media/armazon6.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
 
                 <div class="lentesSol">
                     <img src="../media/sol.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
                 <div class="lentesSol">
                     <img src="../media/sol2.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
                 <div class="lentesSol">
                     <img src="../media/sol3.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
                 <div class="lentesSol">
                     <img src="../media/sol4.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
                 <div class="lentesSol">
                     <img src="../media/sol5.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
                 <div class="lentesSol">
                     <img src="../media/sol6.jpg" alt="">
-                    <h5>Marca+modelo</h5>
+                    <div class="overlay">
+                        <h2>Marca+Modelo</h2>
+                    </div>
                 </div>
                 <div class="galeria__contVideo">
                     <video class="galeria__contVideo--video" src="../media/lentes.mp4" controls></video>
