se agrega video y responsive

--- a/index.html
+++ b/index.html
@@ -59,11 +59,17 @@
                     </ul>
                 </div>
             </div>
-        </nav>        
+        </nav>
     </header>
-    <!-------------------------------------MAIN------------------------------------------------------------->
-   <section class="hero">
-        <div id="carouselExampleCaptions" class="carousel slide carousel-dark pt-1" data-bs-ride="carousel">
+
+    <!-----------------------------------HERO---------------------------------------------------------->
+    <section class="hero">
+        <div class="contenido__video">        
+            <video class="video" autoplay="autoplay" loop="loop" muted="muted">
+                <source src="./media/video4.mp4" type="video/mp4" />
+            </video>
+        </div>
+           <div id="carouselExampleCaptions" class="carousel slide carousel-dark pt-1" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -73,8 +79,8 @@
                     aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                     aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
-                    aria-label="Slide 5"></button>
+              <!--   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button> -->
             </div>
             <div class="carousel-inner contenedor-slider ">
                 <div class="carousel-item active">
@@ -97,12 +103,12 @@
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                 </div>
-                <div class="carousel-item">
+               <!--  <div class="carousel-item">
                     <video src="./media/slide5.mp4" autoplay loop
                         class="d-block w-100 carousel-item__video"></video>
                     <div class="carousel-caption d-none d-md-block">
                     </div>
-                </div>
+                </div> -->
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                 data-bs-slide="prev">
@@ -119,8 +125,10 @@
             <path d="M0.00,50.06 C134.62,-29.21 270.63,193.13 502.58,55.76 L500.00,150.22 L0.00,150.22 Z"
                 style="stroke: none; fill:#f9e9e9;"></path>
         </svg> </div>
-    </section>  
-    <main >             
+    </section>
+
+    <!-------------------------------------MAIN------------------------------------------------------------->
+    <main>
         <h1>VisionArv</h1>
         <div class="container-fluid">
             <div class="row">
