--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
-              <!--   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
-                    aria-label="Slide 5"></button> -->
+                    aria-label="Slide 4"></button>              
             </div>
             <div class="carousel-inner contenedor-slider ">
                 <div class="carousel-item active">
@@ -102,13 +100,7 @@
                     <img src="./media/slide4.jpg" class="d-block w-100 carousel-item__img" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                     </div>
-                </div>
-               <!--  <div class="carousel-item">
-                    <video src="./media/slide5.mp4" autoplay loop
-                        class="d-block w-100 carousel-item__video"></video>
-                    <div class="carousel-caption d-none d-md-block">
-                    </div>
-                </div> -->
+                </div>             
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                 data-bs-slide="prev">
@@ -167,15 +159,36 @@
                     </div>
                     <!----------------Galeria de marcas---------------------------->
                     <div class="marcas">
-                        <p class="marcas__text" data-aos="zoom-out-up" data-aos-duration="800">Marcas que nos acompañan
-                        </p>
-                        <img class="marcas__img" src="./media/ray-ban-logo.png" alt="" data-aos="zoom-in-up"
-                            data-aos-duration="3000">
-                        <img class="marcas__img" src="./media/rustylogo.png" alt="" data-aos="zoom-in-up"
-                            data-aos-duration="3000">
-                        <img class="marcas__img" src="./media/reef.jpg" alt="" data-aos="zoom-in-up"
-                            data-aos-duration="3000">
-                    </div>
+                        <p class="marcas__text" data-aos="zoom-out-up" data-aos-duration="800">Marcas que nos acompañan</p>
+
+                        <div id="carouselExampleControls" class="carousel slide carousel-dark " data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img class="marcas__img"  src="./media/logo-polo.png" class="d-block w-100" alt="...">
+                                <img class="marcas__img"  src="./media/logo-reef.png" class="d-block w-100" alt="...">
+                                <img class="marcas__img"  src="./media/logo-rusty.png" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="marcas__img"  src="./media/logo-mistral.png" class="d-block w-100" alt="...">
+                                <img class="marcas__img"  src="./media/logo-vulk.png" class="d-block w-100" alt="...">                         
+                                <img class="marcas__img"  src="./media/logo-ossada.png" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="marcas__img"  src="./media/logo-mormaii.png" class="d-block w-100" alt="...">
+                                <img class="marcas__img"  src="./media/logo-ray ban.png" class="d-block w-100" alt="...">       
+                                <img class="marcas__img"  src="./media/logo-infinit.png" class="d-block w-100" alt="...">
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                          </div>                 
+                    </div>                    
                 </div>
             </div>
         </div>
