se mod obra soc

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
     <!-----------------------------------HERO---------------------------------------------------------->
     <section class="hero">
-        <div class="contenido__video">        
+        <div class="contenido__video">
             <video class="video" autoplay="autoplay" loop="loop" muted="muted">
                 <source src="./media/video4.mp4" type="video/mp4" />
             </video>
         </div>
-           <div id="carouselExampleCaptions" class="carousel slide carousel-dark pt-1" data-bs-ride="carousel">
+        <div id="carouselExampleCaptions" class="carousel slide carousel-dark pt-1" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -78,7 +78,7 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>              
+                    aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner contenedor-slider ">
                 <div class="carousel-item active">
@@ -100,23 +100,23 @@
                     <img src="./media/slide4.jpg" class="d-block w-100 carousel-item__img" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                     </div>
-                </div>             
+                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleCaptions"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden ">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            <button class="carousel-control-next " type="button" data-bs-target="#carouselExampleCaptions"
                 data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="carousel-control-next-icon " aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
         <div class="wave"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
-            <path d="M0.00,50.06 C134.62,-29.21 270.63,193.13 502.58,55.76 L500.00,150.22 L0.00,150.22 Z"
-                style="stroke: none; fill:#f9e9e9;"></path>
-        </svg> </div>
+                <path d="M0.00,50.06 C134.62,-29.21 270.63,193.13 502.58,55.76 L500.00,150.22 L0.00,150.22 Z"
+                    style="stroke: none; fill:#f9e9e9;"></path>
+            </svg> </div>
     </section>
 
     <!-------------------------------------MAIN------------------------------------------------------------->
@@ -159,36 +159,48 @@
                     </div>
                     <!----------------Galeria de marcas---------------------------->
                     <div class="marcas">
-                        <p class="marcas__text" data-aos="zoom-out-up" data-aos-duration="800">Marcas que nos acompañan</p>
+                        <p class="marcas__text" data-aos="zoom-out-up" data-aos-duration="800">Marcas que nos acompañan
+                        </p>
 
                         <div id="carouselExampleControls" class="carousel slide carousel-dark " data-bs-ride="carousel">
                             <div class="carousel-inner">
-                              <div class="carousel-item active">
-                                <img class="marcas__img"  src="./media/logo-polo.png" class="d-block w-100" alt="...">
-                                <img class="marcas__img"  src="./media/logo-reef.png" class="d-block w-100" alt="...">
-                                <img class="marcas__img"  src="./media/logo-rusty.png" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="marcas__img"  src="./media/logo-mistral.png" class="d-block w-100" alt="...">
-                                <img class="marcas__img"  src="./media/logo-vulk.png" class="d-block w-100" alt="...">                         
-                                <img class="marcas__img"  src="./media/logo-ossada.png" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="marcas__img"  src="./media/logo-mormaii.png" class="d-block w-100" alt="...">
-                                <img class="marcas__img"  src="./media/logo-ray ban.png" class="d-block w-100" alt="...">       
-                                <img class="marcas__img"  src="./media/logo-infinit.png" class="d-block w-100" alt="...">
-                              </div>
+                                <div class="carousel-item active">
+                                    <img class="marcas__img" src="./media/logo-polo.png" class="d-block w-100"
+                                        alt="...">
+                                    <img class="marcas__img" src="./media/logo-reef.png" class="d-block w-100"
+                                        alt="...">
+                                    <img class="marcas__img" src="./media/logo-rusty.png" class="d-block w-100"
+                                        alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="marcas__img" src="./media/logo-mistral.png" class="d-block w-100"
+                                        alt="...">
+                                    <img class="marcas__img" src="./media/logo-vulk.png" class="d-block w-100"
+                                        alt="...">
+                                    <img class="marcas__img" src="./media/logo-ossada.png" class="d-block w-100"
+                                        alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="marcas__img" src="./media/logo-mormaii.png" class="d-block w-100"
+                                        alt="...">
+                                    <img class="marcas__img" src="./media/logo-ray ban.png" class="d-block w-100"
+                                        alt="...">
+                                    <img class="marcas__img" src="./media/logo-infinit.png" class="d-block w-100"
+                                        alt="...">
+                                </div>
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
                             </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
                             </button>
-                          </div>                 
-                    </div>                    
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
